@@ -1111,6 +1111,28 @@ int  FilePanels::ProcessMouse(const MOUSE_EVENT_RECORD *MouseEvent)
 		}
 	}
 
+	if (MouseEvent->dwButtonState&FROM_LEFT_2ND_BUTTON_PRESSED)
+	{
+		if (MouseEvent->dwEventFlags == MOUSE_MOVED)
+			return TRUE;
+
+		int Key = KEY_ENTER;
+		if (MouseEvent->dwControlKeyState&SHIFT_PRESSED)
+		{
+			Key |= KEY_SHIFT;
+		}
+		if (MouseEvent->dwControlKeyState&(LEFT_CTRL_PRESSED | RIGHT_CTRL_PRESSED))
+		{
+			Key |= KEY_CTRL;
+		}
+		if (MouseEvent->dwControlKeyState & (LEFT_ALT_PRESSED | RIGHT_ALT_PRESSED))
+		{
+			Key |= KEY_ALT;
+		}
+		ProcessKey(Manager::Key(Key));
+		return TRUE;
+	}
+
 	if (!ActivePanel()->ProcessMouse(MouseEvent))
 		if (!PassivePanel()->ProcessMouse(MouseEvent))
 			if (!m_windowKeyBar->ProcessMouse(MouseEvent))
